XWIKI-18860: Cleanup and integrate the Netflux front-end (realtime-netflux-frontend) * We cannot reuse the JSON.sortify module bundled with ChainPad so we need to add it as a separate dependency. * Fix the version and merge URLs * Fix the CSS for the user avatar on the toolbar * Make sure that special characters in the user name doesn't break the display of the list of users on the toolbar * Use ChainPad.SmartJSONTransformer for user data synchronization (e.g. updates to the user list displayed on the toolbar)

--- a/xwiki-platform-core/xwiki-platform-realtime/xwiki-platform-realtime-webjar/src/main/webjar/toolbar.css
+++ b/xwiki-platform-core/xwiki-platform-realtime/xwiki-platform-realtime-webjar/src/main/webjar/toolbar.css
@@ -21,23 +21,27 @@
   text-decoration: underline;
   color: #005580;
 }
-.rt-user-avatar {
-  vertical-align: top;
-  border: 1px solid #AAAAAA;
+.rt-user-avatar, .rt-user-fake-avatar {
+  border: 1px solid #AAA;
+  border-radius: 4px;
   cursor: pointer;
+  margin: 2px 3px 2px 6px;
+  vertical-align: top;
+}
+.rt-user-avatar {
+  max-width: 20px;
+  max-height: 20px;
 }
 .rt-user-fake-avatar {
-  width: 25px;
-  height: 25px;
-  line-height: 25px;
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
   display: inline-block;
   text-align: center;
   background: #CCCCFF;
   color: #3333FF;
   font-size: 20px;
   font-weight: bold;
-  cursor: pointer;
-  border: 1px solid #AAAAAA;
 }
 #secret-merge {
   opacity: 0;
